# SkillSphere

./: .cursorignore  .cursorrules  .gitattributes  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  Changelog.md  Pipfile  README.md  architecture.md  ats_resume.latex  docker-compose.matomo.yml  docker-compose.yml  experiences.md  extracurricular_template.md  iceberg_option.md  job_experience_template.md  mcp_upgrade.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  resume_prompt_template.md  validate_resume.py
.github/: copilot-instructions.md
ADRs/: README.md  adr_api_versioning.md  adr_logging_strategy.md  adr_neo4j_hypergraph.md  adr_owl_graph_representation.md  adr_security_authentication.md
all_docs_about_me/: Bertelsmann.md  DSR.md  Deloitte_Internship.md  EPAM.md  Ext_EJD.md  GECKO.md  Krungthai-AXA.md  Merck.md  SER02.md  StandardAndPoors.md  TDG.md  Viant.md  certifications.md
applications/: GOOGLE.md  GOVCIO.md  Gartner.md  ust.md
basket/: todo.md
custom_resumes/: qualified_recruiter.md  template.tex
docs/: architecture.md  llm_skill_extraction_instructions.md  repository_skill_analysis_prompt.md  skills_hypergraph.owl
hypergraph/: .env.example  .gitignore  .mypy.ini  .pylintrc  CONFIGURATION_UPDATE.md  Dockerfile  README.md  doc_registry.sqlite3  docker-compose.yml  faiss.index  graph_schema.yaml  ingestion_worker.py  pyproject.toml  skills_hypergraph_ontology.py
hypergraph/.github/workflows/: skill_sphere_mcp_tests.yml  tests.yml
hypergraph/data/: README.md
hypergraph/src/hypergraph/: __init__.py  __main__.py
hypergraph/src/hypergraph/core/: __init__.py  config.py  utils.py
hypergraph/src/hypergraph/db/: __init__.py  graph.py  registry.py
hypergraph/src/hypergraph/embeddings/: __init__.py  faiss.py  faiss_manager.py
hypergraph/src/hypergraph/llm/: __init__.py  triples.py
hypergraph/tests/: conftest.py  test_graph.py  test_main.py  test_registry.py  test_triples.py
hypergraph/tests/data/: faiss.index  registry.db  schema.yaml
ingestion_docs/: README.md
matomo/: README.md  docker-compose.matomo.yml  matomo.config.ini  test_geoip_matomo.php  test_maxmind_direct.php
mcp/: PDD.md  mcp_server.py
media/: email_signature.html  me_headshot_01.xcf
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nginx/: Dockerfile  default.conf  (+4 more)
skill_sphere_mcp/: .env-example  .env.example  .pylintrc  CHANGELOG.md  Dockerfile  MANIFEST.in  Pipfile  README.md  TODO.md  docker-compose.yml  loki-config.yaml  mypy.ini  otel-collector-config.yaml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  skill-sphere-mcp.service
skill_sphere_mcp/.github/workflows/: tests.yml
skill_sphere_mcp/docs/: PDD.md  PRD.md  action_plan.md  architecture.md
skill_sphere_mcp/grafana/provisioning/dashboards/: logs.yaml  mcp.yaml  nginx.json  nginx.yaml  system.yaml  traces.yaml
skill_sphere_mcp/grafana/provisioning/dashboards/logs/: logs-overview.json
skill_sphere_mcp/grafana/provisioning/dashboards/mcp/: mcp-metrics.json
skill_sphere_mcp/grafana/provisioning/dashboards/nginx/: nginx-comprehensive.json  nginx-metrics.json
skill_sphere_mcp/grafana/provisioning/dashboards/system/: system-metrics.json
skill_sphere_mcp/grafana/provisioning/dashboards/traces/: traces-overview.json
skill_sphere_mcp/grafana/provisioning/datasources/: datasources.yaml
skill_sphere_mcp/nginx/: nginx.conf  observability.conf  opentelemetry-config.yaml
skill_sphere_mcp/src/skill_sphere_mcp/: __init__.py  app.py  main.py  mcp_server.py  routes.py
skill_sphere_mcp/src/skill_sphere_mcp/api/: __init__.py  jsonrpc.py  mcp_routes.py  models.py  rest.py  routes.py
skill_sphere_mcp/src/skill_sphere_mcp/api/mcp/: __init__.py  elicitation.py  handlers.py  models.py  routes.py  rpc.py  schemas.py  utils.py
skill_sphere_mcp/src/skill_sphere_mcp/auth/: __init__.py  oauth.py  pat.py
skill_sphere_mcp/src/skill_sphere_mcp/config/: __init__.py  settings.py
skill_sphere_mcp/src/skill_sphere_mcp/cv/: __init__.py  generator.py
skill_sphere_mcp/src/skill_sphere_mcp/db/: __init__.py  connection.py  deps.py  neo4j.py  utils.py
skill_sphere_mcp/src/skill_sphere_mcp/graph/: embeddings.py  node2vec.py  skill_matching.py
skill_sphere_mcp/src/skill_sphere_mcp/graph/node2vec/: __init__.py  config.py  model.py  sampling.py  state.py  training.py  walks.py
skill_sphere_mcp/src/skill_sphere_mcp/middleware/: matomo_tracking.py  protocol_version.py
skill_sphere_mcp/src/skill_sphere_mcp/models/: __init__.py  embedding.py  extended_fields.py  graph.py  mcp.py  skill.py
skill_sphere_mcp/src/skill_sphere_mcp/static/: index.html
skill_sphere_mcp/src/skill_sphere_mcp/static/.well-known/: placeholder.txt
skill_sphere_mcp/src/skill_sphere_mcp/telemetry/: __init__.py  otel.py
skill_sphere_mcp/src/skill_sphere_mcp/tools/: dispatcher.py  handlers.py
skill_sphere_mcp/src/skill_sphere_mcp/utils/: validation.py
skill_sphere_mcp/src/static/: index.html
skill_sphere_mcp/src/static/.well-known/: mcp-oauth.json
skill_sphere_mcp/tempo-data/blocks/: tempo_cluster_seed.json
skill_sphere_mcp/tests/: __init__.py  conftest.py  constants.py  test_main.py  test_mcp_server.py  test_settings.py
skill_sphere_mcp/tests/api/: test_elicitation.py  test_feature_flag_oauth.py  test_jsonrpc.py  test_lifecycle.py  test_mcp_handlers.py  test_mcp_models.py  test_mcp_routes.py  test_mcp_server.py  test_routes.py
skill_sphere_mcp/tests/auth/: test_oauth.py  test_pat.py
skill_sphere_mcp/tests/config/: test_settings.py
skill_sphere_mcp/tests/data/: schema.yaml
skill_sphere_mcp/tests/db/: test_connection.py  test_deps.py  test_neo4j.py  test_utils.py
skill_sphere_mcp/tests/graph/: test_embeddings.py  test_node2vec.py  test_skill_matching.py
skill_sphere_mcp/tests/middleware/: test_matomo_tracking.py  test_protocol_version.py
skill_sphere_mcp/tests/telemetry/: __init__.py  test_otel.py
skill_sphere_mcp/tests/tools/: test_cv_generator.py  test_dispatcher.py  test_handlers.py  test_structured_output.py
(+56 files in other folders)
