[tool.setuptools]
packages = ["skill_sphere_mcp"]

[project]
name = "myjobagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <=3.10.17"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "neo4j>=5.28.1",
    "node2vec>=0.4.3",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
    "owlready2>=0.47",
    "pandoc-plantuml-filter>=0.1.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.11.0,<1.14.0",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pandoc-plantuml-filter>=0.1.5",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.uv.workspace]
members = [
    "skill_sphere_mcp",
]
